parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IF

Grammar

Rule 0     S' -> statement
Rule 1     statement -> PRINTLIST
Rule 2     statement -> VAR EQUALS expression
Rule 3     statement -> VAR EQUALS equation
Rule 4     statement -> VAR EQUALS result
Rule 5     statement -> expression
Rule 6     statement -> equation
Rule 7     statement -> result
Rule 8     expression -> VAR
Rule 9     expression -> expression PLUS expression
Rule 10    expression -> expression MINUS expression
Rule 11    expression -> expression MULT expression
Rule 12    expression -> expression DIV expression
Rule 13    expression -> expression POWER expression
Rule 14    expression -> term CHARACTER POWER term PLUS term CHARACTER PLUS term
Rule 15    expression -> term CHARACTER POWER term PLUS term CHARACTER MINUS term
Rule 16    expression -> term CHARACTER POWER term MINUS term CHARACTER PLUS term
Rule 17    expression -> term CHARACTER POWER term MINUS term CHARACTER MINUS term
Rule 18    expression -> LPAR term COMMA term RPAR
Rule 19    expression -> LPAR expression RPAR
Rule 20    expression -> MINUS expression
Rule 21    expression -> term
Rule 22    term -> FLOAT
Rule 23    term -> INT
Rule 24    result -> term CHARACTER POWER term PLUS term CHARACTER PLUS term
Rule 25    result -> term CHARACTER POWER term PLUS term CHARACTER MINUS term
Rule 26    result -> term CHARACTER POWER term MINUS term CHARACTER PLUS term
Rule 27    result -> term CHARACTER POWER term MINUS term CHARACTER MINUS term
Rule 28    result -> term MULT term MULT VAR POWER term DIV term
Rule 29    result -> INTEGRAL OF expression
Rule 30    result -> INTEGRAL OF equation
Rule 31    result -> INTEGRAL FROM expression TO expression OF expression
Rule 32    result -> INTEGRAL FROM expression TO expression OF equation
Rule 33    result -> INTEGRAL FROM expression TO INFINITY OF expression
Rule 34    result -> INTEGRAL FROM expression TO INFINITY OF equation
Rule 35    result -> DERIVATIVE OF expression
Rule 36    result -> DERIVATIVE OF equation
Rule 37    result -> LIMIT WHEN X GOES expression OF expression
Rule 38    result -> LIMIT WHEN X GOES INFINITY OF expression
Rule 39    result -> LIMIT WHEN X GOES expression OF equation
Rule 40    result -> LIMIT WHEN X GOES INFINITY OF equation
Rule 41    result -> SUMMATION FROM expression TO expression OF expression
Rule 42    result -> SUMMATION FROM expression TO expression OF equation
Rule 43    result -> INT
Rule 44    result -> LPAR term COMMA term RPAR
Rule 45    result -> term
Rule 46    result -> term term
Rule 47    result -> term term term
Rule 48    result -> term term term term
Rule 49    result -> PRODUCT FROM expression TO expression OF expression
Rule 50    result -> PRODUCT FROM expression TO expression OF equation
Rule 51    equation -> equation PLUS equation
Rule 52    equation -> equation MINUS equation
Rule 53    equation -> equation MULT equation
Rule 54    equation -> equation DIV equation
Rule 55    equation -> equation POWER equation
Rule 56    equation -> equation PLUS expression
Rule 57    equation -> equation MINUS expression
Rule 58    equation -> equation MULT expression
Rule 59    equation -> equation DIV expression
Rule 60    equation -> equation POWER expression
Rule 61    equation -> expression PLUS equation
Rule 62    equation -> expression MINUS equation
Rule 63    equation -> expression MULT equation
Rule 64    equation -> expression DIV equation
Rule 65    equation -> expression POWER equation
Rule 66    equation -> X
Rule 67    equation -> SIN LPAR expression RPAR
Rule 68    equation -> SIN LPAR equation RPAR
Rule 69    equation -> COS LPAR expression RPAR
Rule 70    equation -> COS LPAR equation RPAR
Rule 71    equation -> TAN LPAR expression RPAR
Rule 72    equation -> TAN LPAR equation RPAR
Rule 73    equation -> LPAR equation RPAR
Rule 74    equation -> MINUS equation

Terminals, with rules where they appear

CHARACTER            : 14 14 15 15 16 16 17 17 24 24 25 25 26 26 27 27
COMMA                : 18 44
COS                  : 69 70
DERIVATIVE           : 35 36
DIV                  : 12 28 54 59 64
EQUALS               : 2 3 4
FLOAT                : 22
FROM                 : 31 32 33 34 41 42 49 50
GOES                 : 37 38 39 40
IF                   : 
INFINITY             : 33 34 38 40
INT                  : 23 43
INTEGRAL             : 29 30 31 32 33 34
LIMIT                : 37 38 39 40
LPAR                 : 18 19 44 67 68 69 70 71 72 73
MINUS                : 10 15 16 17 17 20 25 26 27 27 52 57 62 74
MULT                 : 11 28 28 53 58 63
OF                   : 29 30 31 32 33 34 35 36 37 38 39 40 41 42 49 50
PLUS                 : 9 14 14 15 16 24 24 25 26 51 56 61
POWER                : 13 14 15 16 17 24 25 26 27 28 55 60 65
PRINTLIST            : 1
PRODUCT              : 49 50
RPAR                 : 18 19 44 67 68 69 70 71 72 73
SIN                  : 67 68
SUMMATION            : 41 42
TAN                  : 71 72
TO                   : 31 32 33 34 41 42 49 50
VAR                  : 2 3 4 8 28
WHEN                 : 37 38 39 40
X                    : 37 38 39 40 66
error                : 

Nonterminals, with rules where they appear

equation             : 3 6 30 32 34 36 39 40 42 50 51 51 52 52 53 53 54 54 55 55 56 57 58 59 60 61 62 63 64 65 68 70 72 73 74
expression           : 2 5 9 9 10 10 11 11 12 12 13 13 19 20 29 31 31 31 32 32 33 33 34 35 37 37 38 39 41 41 41 42 42 49 49 49 50 50 56 57 58 59 60 61 62 63 64 65 67 69 71
result               : 4 7
statement            : 0
term                 : 14 14 14 14 15 15 15 15 16 16 16 16 17 17 17 17 18 18 21 24 24 24 24 25 25 25 25 26 26 26 26 27 27 27 27 28 28 28 28 44 44 45 46 46 47 47 47 48 48 48 48

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . PRINTLIST
    (2) statement -> . VAR EQUALS expression
    (3) statement -> . VAR EQUALS equation
    (4) statement -> . VAR EQUALS result
    (5) statement -> . expression
    (6) statement -> . equation
    (7) statement -> . result
    (8) expression -> . VAR
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression POWER expression
    (14) expression -> . term CHARACTER POWER term PLUS term CHARACTER PLUS term
    (15) expression -> . term CHARACTER POWER term PLUS term CHARACTER MINUS term
    (16) expression -> . term CHARACTER POWER term MINUS term CHARACTER PLUS term
    (17) expression -> . term CHARACTER POWER term MINUS term CHARACTER MINUS term
    (18) expression -> . LPAR term COMMA term RPAR
    (19) expression -> . LPAR expression RPAR
    (20) expression -> . MINUS expression
    (21) expression -> . term
    (51) equation -> . equation PLUS equation
    (52) equation -> . equation MINUS equation
    (53) equation -> . equation MULT equation
    (54) equation -> . equation DIV equation
    (55) equation -> . equation POWER equation
    (56) equation -> . equation PLUS expression
    (57) equation -> . equation MINUS expression
    (58) equation -> . equation MULT expression
    (59) equation -> . equation DIV expression
    (60) equation -> . equation POWER expression
    (61) equation -> . expression PLUS equation
    (62) equation -> . expression MINUS equation
    (63) equation -> . expression MULT equation
    (64) equation -> . expression DIV equation
    (65) equation -> . expression POWER equation
    (66) equation -> . X
    (67) equation -> . SIN LPAR expression RPAR
    (68) equation -> . SIN LPAR equation RPAR
    (69) equation -> . COS LPAR expression RPAR
    (70) equation -> . COS LPAR equation RPAR
    (71) equation -> . TAN LPAR expression RPAR
    (72) equation -> . TAN LPAR equation RPAR
    (73) equation -> . LPAR equation RPAR
    (74) equation -> . MINUS equation
    (24) result -> . term CHARACTER POWER term PLUS term CHARACTER PLUS term
    (25) result -> . term CHARACTER POWER term PLUS term CHARACTER MINUS term
    (26) result -> . term CHARACTER POWER term MINUS term CHARACTER PLUS term
    (27) result -> . term CHARACTER POWER term MINUS term CHARACTER MINUS term
    (28) result -> . term MULT term MULT VAR POWER term DIV term
    (29) result -> . INTEGRAL OF expression
    (30) result -> . INTEGRAL OF equation
    (31) result -> . INTEGRAL FROM expression TO expression OF expression
    (32) result -> . INTEGRAL FROM expression TO expression OF equation
    (33) result -> . INTEGRAL FROM expression TO INFINITY OF expression
    (34) result -> . INTEGRAL FROM expression TO INFINITY OF equation
    (35) result -> . DERIVATIVE OF expression
    (36) result -> . DERIVATIVE OF equation
    (37) result -> . LIMIT WHEN X GOES expression OF expression
    (38) result -> . LIMIT WHEN X GOES INFINITY OF expression
    (39) result -> . LIMIT WHEN X GOES expression OF equation
    (40) result -> . LIMIT WHEN X GOES INFINITY OF equation
    (41) result -> . SUMMATION FROM expression TO expression OF expression
    (42) result -> . SUMMATION FROM expression TO expression OF equation
    (43) result -> . INT
    (44) result -> . LPAR term COMMA term RPAR
    (45) result -> . term
    (46) result -> . term term
    (47) result -> . term term term
    (48) result -> . term term term term
    (49) result -> . PRODUCT FROM expression TO expression OF expression
    (50) result -> . PRODUCT FROM expression TO expression OF equation
    (22) term -> . FLOAT
    (23) term -> . INT

    PRINTLIST       shift and go to state 2
    VAR             shift and go to state 3
    LPAR            shift and go to state 9
    MINUS           shift and go to state 7
    X               shift and go to state 10
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    INTEGRAL        shift and go to state 14
    DERIVATIVE      shift and go to state 15
    LIMIT           shift and go to state 16
    SUMMATION       shift and go to state 17
    INT             shift and go to state 18
    PRODUCT         shift and go to state 19
    FLOAT           shift and go to state 20

    statement                      shift and go to state 1
    expression                     shift and go to state 4
    equation                       shift and go to state 5
    result                         shift and go to state 6
    term                           shift and go to state 8

state 1

    (0) S' -> statement .



state 2

    (1) statement -> PRINTLIST .

    $end            reduce using rule 1 (statement -> PRINTLIST .)


state 3

    (2) statement -> VAR . EQUALS expression
    (3) statement -> VAR . EQUALS equation
    (4) statement -> VAR . EQUALS result
    (8) expression -> VAR .

    EQUALS          shift and go to state 21
    PLUS            reduce using rule 8 (expression -> VAR .)
    MINUS           reduce using rule 8 (expression -> VAR .)
    MULT            reduce using rule 8 (expression -> VAR .)
    DIV             reduce using rule 8 (expression -> VAR .)
    POWER           reduce using rule 8 (expression -> VAR .)
    $end            reduce using rule 8 (expression -> VAR .)


state 4

    (5) statement -> expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . MULT expression
    (12) expression -> expression . DIV expression
    (13) expression -> expression . POWER expression
    (61) equation -> expression . PLUS equation
    (62) equation -> expression . MINUS equation
    (63) equation -> expression . MULT equation
    (64) equation -> expression . DIV equation
    (65) equation -> expression . POWER equation

    $end            reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    MULT            shift and go to state 24
    DIV             shift and go to state 25
    POWER           shift and go to state 26


state 5

    (6) statement -> equation .
    (51) equation -> equation . PLUS equation
    (52) equation -> equation . MINUS equation
    (53) equation -> equation . MULT equation
    (54) equation -> equation . DIV equation
    (55) equation -> equation . POWER equation
    (56) equation -> equation . PLUS expression
    (57) equation -> equation . MINUS expression
    (58) equation -> equation . MULT expression
    (59) equation -> equation . DIV expression
    (60) equation -> equation . POWER expression

    $end            reduce using rule 6 (statement -> equation .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    MULT            shift and go to state 29
    DIV             shift and go to state 30
    POWER           shift and go to state 31


state 6

    (7) statement -> result .

    $end            reduce using rule 7 (statement -> result .)


state 7

    (20) expression -> MINUS . expression
    (74) equation -> MINUS . equation
    (8) expression -> . VAR
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression POWER expression
    (14) expression -> . term CHARACTER POWER term PLUS term CHARACTER PLUS term
    (15) expression -> . term CHARACTER POWER term PLUS term CHARACTER MINUS term
    (16) expression -> . term CHARACTER POWER term MINUS term CHARACTER PLUS term
    (17) expression -> . term CHARACTER POWER term MINUS term CHARACTER MINUS term
    (18) expression -> . LPAR term COMMA term RPAR
    (19) expression -> . LPAR expression RPAR
    (20) expression -> . MINUS expression
    (21) expression -> . term
    (51) equation -> . equation PLUS equation
    (52) equation -> . equation MINUS equation
    (53) equation -> . equation MULT equation
    (54) equation -> . equation DIV equation
    (55) equation -> . equation POWER equation
    (56) equation -> . equation PLUS expression
    (57) equation -> . equation MINUS expression
    (58) equation -> . equation MULT expression
    (59) equation -> . equation DIV expression
    (60) equation -> . equation POWER expression
    (61) equation -> . expression PLUS equation
    (62) equation -> . expression MINUS equation
    (63) equation -> . expression MULT equation
    (64) equation -> . expression DIV equation
    (65) equation -> . expression POWER equation
    (66) equation -> . X
    (67) equation -> . SIN LPAR expression RPAR
    (68) equation -> . SIN LPAR equation RPAR
    (69) equation -> . COS LPAR expression RPAR
    (70) equation -> . COS LPAR equation RPAR
    (71) equation -> . TAN LPAR expression RPAR
    (72) equation -> . TAN LPAR equation RPAR
    (73) equation -> . LPAR equation RPAR
    (74) equation -> . MINUS equation
    (22) term -> . FLOAT
    (23) term -> . INT

    VAR             shift and go to state 34
    LPAR            shift and go to state 36
    MINUS           shift and go to state 7
    X               shift and go to state 10
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    FLOAT           shift and go to state 20
    INT             shift and go to state 37

    expression                     shift and go to state 32
    equation                       shift and go to state 33
    term                           shift and go to state 35

state 8

    (14) expression -> term . CHARACTER POWER term PLUS term CHARACTER PLUS term
    (15) expression -> term . CHARACTER POWER term PLUS term CHARACTER MINUS term
    (16) expression -> term . CHARACTER POWER term MINUS term CHARACTER PLUS term
    (17) expression -> term . CHARACTER POWER term MINUS term CHARACTER MINUS term
    (21) expression -> term .
    (24) result -> term . CHARACTER POWER term PLUS term CHARACTER PLUS term
    (25) result -> term . CHARACTER POWER term PLUS term CHARACTER MINUS term
    (26) result -> term . CHARACTER POWER term MINUS term CHARACTER PLUS term
    (27) result -> term . CHARACTER POWER term MINUS term CHARACTER MINUS term
    (28) result -> term . MULT term MULT VAR POWER term DIV term
    (45) result -> term .
    (46) result -> term . term
    (47) result -> term . term term
    (48) result -> term . term term term
    (22) term -> . FLOAT
    (23) term -> . INT

  ! shift/reduce conflict for MULT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 21 (expression -> term .)
    CHARACTER       shift and go to state 39
    PLUS            reduce using rule 21 (expression -> term .)
    MINUS           reduce using rule 21 (expression -> term .)
    DIV             reduce using rule 21 (expression -> term .)
    POWER           reduce using rule 21 (expression -> term .)
    $end            reduce using rule 21 (expression -> term .)
    MULT            shift and go to state 40
    FLOAT           shift and go to state 20
    INT             shift and go to state 37

  ! MULT            [ reduce using rule 21 (expression -> term .) ]
  ! $end            [ reduce using rule 45 (result -> term .) ]

    term                           shift and go to state 38

state 9

    (18) expression -> LPAR . term COMMA term RPAR
    (19) expression -> LPAR . expression RPAR
    (73) equation -> LPAR . equation RPAR
    (44) result -> LPAR . term COMMA term RPAR
    (22) term -> . FLOAT
    (23) term -> . INT
    (8) expression -> . VAR
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression MULT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression POWER expression
    (14) expression -> . term CHARACTER POWER term PLUS term CHARACTER PLUS term
    (15) expression -> . term CHARACTER POWER term PLUS term CHARACTER MINUS term
    (16) expression -> . term CHARACTER POWER term MINUS term CHARACTER PLUS term
    (17) expression -> . term CHARACTER POWER term MINUS term CHARACTER MINUS term
    (18) expression -> . LPAR term COMMA term RPAR
    (19) expression -> . LPAR expression RPAR
    (20) expression -> . MINUS expression
    (21) expression -> . term
    (51) equation -> . equation PLUS equation
    (52) equation -> . equation MINUS equation
    (53) equation -> . equation MULT equation
    (54) equation -> . equation DIV equation
    (55) equation -> . equation POWER equation
    (56) equation -> . equation PLUS expression
    (57) equation -> . equation MINUS expression
    (58) equation -> . equation MULT expression
    (59) equation -> . equation DIV expression
    (60) equation -> . equation POWER expression
    (61) equation -> . expression PLUS equation
    (62) equation -> . expression MINUS equation
    (63) equation -> . expression MULT equation
    (64) equation -> . expression DIV equation
    (65) equation -> . expression POWER equation
    (66) equation -> . X
    (67) equation -> . SIN LPAR expression RPAR
    (68) equation -> . SIN LPAR equation RPAR
    (69) equation -> . COS LPAR expression RPAR
    (70) equation -> . COS LPAR equation RPAR
    (71) equation -> . TAN LPAR expression RPAR
    (72) equation -> . TAN LPAR equation RPAR
    (73) equation -> . LPAR equation RPAR
    (74) equation -> . MINUS equation

    FLOAT           shift and go to state 20
    INT             shift and go to state 37
    VAR             shift and go to state 34
    LPAR            shift and go to state 36
    MINUS           shift and go to state 7
    X               shift and go to state 10
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13

    term                           shift and go to state 41
    expression                     shift and go to state 42
    equation                       shift and go to state 43

state 10

    (66) equation -> X .

    PLUS            reduce using rule 66 (equation -> X .)
    MINUS           reduce using rule 66 (equation -> X .)
    MULT            reduce using rule 66 (equation -> X .)
    DIV             reduce using rule 66 (equation -> X .)
    POWER           reduce using rule 66 (equation -> X .)
    $end            reduce using rule 66 (equation -> X .)
    RPAR            reduce using rule 66 (equation -> X .)


state 11

    (67) equation -> SIN . LPAR expression RPAR
    (68) equation -> SIN . LPAR equation RPAR

    LPAR            shift and go to state 44


state 12

    (69) equation -> COS . LPAR expression RPAR
    (70) equation -> COS . LPAR equation RPAR

    LPAR            shift and go to state 45


state 13

    (71) equation -> TAN . LPAR expression RPAR
    (72) equation -> TAN . LPAR equation RPAR

    LPAR            shift and go to state 46


state 14

    (29) result -> INTEGRAL . OF expression
    (30) result -> INTEGRAL . OF equation
    (31) result -> INTEGRAL . FROM expression TO expression OF expression
    (32) result -> INTEGRAL . FROM expression TO expression OF equation
    (33) result -> INTEGRAL . FROM expression TO INFINITY OF expression
    (34) result -> INTEGRAL . FROM expression TO INFINITY OF equation

    OF              shift and go to state 47
    FROM            shift and go to state 48


state 15

    (35) result -> DERIVATIVE . OF expression
    (36) result -> DERIVATIVE . OF equation

    OF              shift and go to state 49


state 16

    (37) result -> LIMIT . WHEN X GOES expression OF expression
    (38) result -> LIMIT . WHEN X GOES INFINITY OF expression
    (39) result -> LIMIT . WHEN X GOES expression OF equation
    (40) result -> LIMIT . WHEN X GOES INFINITY OF equation

    WHEN            shift and go to state 50


state 17

    (41) result -> SUMMATION . FROM expression TO expression OF expression
    (42) result -> SUMMATION . FROM expression TO expression OF equation

    FROM            shift and go to state 51


state 18

    (43) result -> INT .
    (23) term -> INT .

  ! reduce/reduce conflict for $end resolved using rule 23 (term -> INT .)
    CHARACTER       reduce using rule 23 (term -> INT .)
    MULT            reduce using rule 23 (term -> INT .)
    FLOAT           reduce using rule 23 (term -> INT .)
    INT             reduce using rule 23 (term -> INT .)
    PLUS            reduce using rule 23 (term -> INT .)
    MINUS           reduce using rule 23 (term -> INT .)
    DIV             reduce using rule 23 (term -> INT .)
    POWER           reduce using rule 23 (term -> INT .)
    $end            reduce using rule 23 (term -> INT .)

  ! $end            [ reduce using rule 43 (result -> INT .) ]


state 19

    (49) result -> PRODUCT . FROM expression TO expression OF expression
    (50) result -> PRODUCT . FROM expression TO expression OF equation

    FROM            shift and go to state 52


state 20

    (22) term -> FLOAT .

    CHARACTER       reduce using rule 22 (term -> FLOAT .)
    MULT            reduce using rule 22 (term -> FLOAT .)
    FLOAT           reduce using rule 22 (term -> FLOAT .)
    INT             reduce using rule 22 (term -> FLOAT .)
    PLUS            reduce using rule 22 (term -> FLOAT .)
    MINUS           reduce using rule 22 (term -> FLOAT .)
    DIV             reduce using rule 22 (term -> FLOAT .)
    POWER           reduce using rule 22 (term -> FLOAT .)
    $end            reduce using rule 22 (term -> FLOAT .)
    RPAR            reduce using rule 22 (term -> FLOAT .)
    COMMA           reduce using rule 22 (term -> FLOAT .)
    TO              reduce using rule 22 (term -> FLOAT .)
    OF              reduce using rule 22 (term -> FLOAT .)


state 21
